--- a/notebooks/Part_3_Making_inferences.ipynb
+++ b/notebooks/Part_3_Making_inferences.ipynb
@@ -563,12 +563,12 @@
         "\n",
         "# Sort all weights:\n",
         "\n",
-        "i = np.argsort(w)\n",
+        "i = np.argsort(p_samples)\n",
         "w = w[i]\n",
         "p_samples = p_samples[i]\n",
         "# Another way to find interval bounds using weights through library functions:\n",
         "F = np.cumsum(w)\n",
-        "lo, hi = p_samples[F<0.025][-1], p_samples[F>0.0975][0]\n",
+        "lo, hi = p_samples[F<0.025][-1], p_samples[F>0.975][0]\n",
         "\n",
         "print(\"95% confidence interval: [\",lo,\";\", hi,\"]\")\n",
         "\n",
